3rd attempt to fix syntax error in header and footer SASS

--- a/app/assets/stylesheets/_yomobi.footer.sass
+++ b/app/assets/stylesheets/_yomobi.footer.sass
@@ -1,14 +1,14 @@
 #footer-wrap
   font-family: $sans-serif
-  //background: url('/assets/footer-bg.png') $blue repeat-x center top
-  background-color: $blue; /* Old browsers */
-  background: -moz-linear-gradient(top,  #257992 0%, #257992 2%, #328da9 7%, #3ea0be 14%, $blue 21%, $blue 100%); /* FF3.6+ */
-  background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,#257992), color-stop(2%,#257992), color-stop(7%,#328da9), color-stop(14%,#3ea0be), color-stop(21%,$blue), color-stop(100%,$blue)); /* Chrome,Safari4+ */
-  background: -webkit-linear-gradient(top,  #257992 0%,#257992 2%,#328da9 7%,#3ea0be 14%,$blue 21%,$blue 100%); /* Chrome10+,Safari5.1+ */
-  background: -o-linear-gradient(top,  #257992 0%,#257992 2%,#328da9 7%,#3ea0be 14%,$blue 21%,$blue 100%); /* Opera 11.10+ */
-  background: -ms-linear-gradient(top,  #257992 0%,#257992 2%,#328da9 7%,#3ea0be 14%,$blue 21%,$blue 100%); /* IE10+ */
-  background: linear-gradient(to bottom,  #257992 0%,#257992 2%,#328da9 7%,#3ea0be 14%,$blue 21%,$blue 100%); /* W3C */
-  filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#257992', endColorstr='$blue',GradientType=0 ); /* IE6-9 */
+  background: url('/assets/footer-bg.png') $blue repeat-x center top
+  //background-color: $blue; /* Old browsers */
+  //background: -moz-linear-gradient(top,  #257992 0%, #257992 2%, #328da9 7%, #3ea0be 14%, $blue 21%, $blue 100%); /* FF3.6+ */
+  //background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,#257992), color-stop(2%,#257992), color-stop(7%,#328da9), color-stop(14%,#3ea0be), color-stop(21%,$blue), color-stop(100%,$blue)); /* Chrome,Safari4+ */
+  //background: -webkit-linear-gradient(top,  #257992 0%,#257992 2%,#328da9 7%,#3ea0be 14%,$blue 21%,$blue 100%); /* Chrome10+,Safari5.1+ */
+  //background: -o-linear-gradient(top,  #257992 0%,#257992 2%,#328da9 7%,#3ea0be 14%,$blue 21%,$blue 100%); /* Opera 11.10+ */
+  //background: -ms-linear-gradient(top,  #257992 0%,#257992 2%,#328da9 7%,#3ea0be 14%,$blue 21%,$blue 100%); /* IE10+ */
+  //background: linear-gradient(to bottom,  #257992 0%,#257992 2%,#328da9 7%,#3ea0be 14%,$blue 21%,$blue 100%); /* W3C */
+  //filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#257992', endColorstr='$blue',GradientType=0 ); /* IE6-9 */
 
 
 
