Revert "Fix syntax error in yomobi.screen.sass"
This reverts commit a9c5bf77aa7c6f41e1adb379a923e16b3d6d98be.

--- a/app/assets/stylesheets/yomobi.screen.sass
+++ b/app/assets/stylesheets/yomobi.screen.sass
@@ -212,7 +212,7 @@ a,
 .plans
   .row
     & > .link
-      +btn-color(60%, 40px, $green, $green, $white, 24px, 20px)
+      +btn-color(60%, 40px, 10px, $green, $green, $white, 24px, 20px)
       text-transform: uppercase
    
     & > .title
