Revert "2nd attempt to fix syntax error in header and footer SASS"
This reverts commit 82dc99382b6672b3f53e85b8101a74590e79ddae.

--- a/app/assets/stylesheets/_yomobi.header.sass
+++ b/app/assets/stylesheets/_yomobi.header.sass
@@ -1,7 +1,7 @@
 #header-wrap
   height: 180px
   //background: url('/assets/header-bg.png') $blue repeat-x center bottom
-  background-color: $blue; /* Old browsers */
+  background: #43a8c7; /* Old browsers */
   background: -moz-linear-gradient(top,  $blue 0%, $blue 82%, #3d9fbc 90%, #338fab 95%, #257992 100%); /* FF3.6+ */
   background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,$blue), color-stop(82%,$blue), color-stop(90%,#3d9fbc), color-stop(95%,#338fab), color-stop(100%,#257992)); /* Chrome,Safari4+ */
   background: -webkit-linear-gradient(top,  $blue 0%,$blue 82%,#3d9fbc 90%,#338fab 95%,#257992 100%); /* Chrome10+,Safari5.1+ */
