--- a/app/assets/stylesheets/_cdd.cdd.sass
+++ b/app/assets/stylesheets/_cdd.cdd.sass
@@ -71,7 +71,7 @@ img
     padding-top: $padding-top
     text-decoration: none
 
-@mixin btn-color($width, $radius, $color, $border-color, $text-color, $font-size, $padding)
+@mixin btn-color($width, $height, $radius, $color, $border-color, $text-color, $font-size, $padding-top)
   +border-radius($radius)
   background: $color
   border: 1px solid $border-color 
@@ -80,11 +80,12 @@ img
   a
     display: block
     color: $text-color
+    height: $height
     font-size: $font-size
-    padding: $padding
+    padding-top: $padding-top
     text-decoration: none
 
-@mixin btn-color-image($width, $radius, $color, $border-color, $text-color, $font-size, $padding-top, $padding-right, $padding-btm, $padding-left, $image, $left: 95%, $top: 50%)
+@mixin btn-color-image($width, $height, $radius, $color, $border-color, $text-color, $font-size, $padding-top, $padding-left, $image, $left: 95%, $top: 50%)
   +border-radius($radius)
   border: 1px solid $border-color
   background: url('#{$image}') no-repeat $left $top $color
@@ -94,7 +95,8 @@ img
     color: $text-color
     display: block
     font-size: $font-size
-    padding: $padding-top $padding-right $padding-btm $padding-left
+    height: $height
+    padding-top: $padding-top
     text-decoration: none
 
 //social menu
