--- a/app/assets/stylesheets/yomobi.screen.sass
+++ b/app/assets/stylesheets/yomobi.screen.sass
@@ -115,13 +115,13 @@ a,
       margin-right: 0
     & > .text
       p
-        padding: 40px 50% 0 6%
+        padding: 30px 45% 0 6%
     & > .i10n
       +hidden-600
       right: 6%
       top: 30px
       position: absolute
-      width: 48%
+      //width: 48%
       img
         max-width: 100%
     & > .link
