Fixed syntax error in cdd.sass

--- a/app/assets/stylesheets/_cdd.cdd.sass
+++ b/app/assets/stylesheets/_cdd.cdd.sass
@@ -97,7 +97,7 @@ img
     font-size: $font-size
     //height: $height
     padding: $padding
-    margin-right: 25px;
+    margin-right: 25px
     text-decoration: none
 
 //social menu
