Updated CSS for contact page

--- a/app/assets/stylesheets/_yomobi.params.sass
+++ b/app/assets/stylesheets/_yomobi.params.sass
@@ -10,7 +10,7 @@ $green: #87bf73
 $blue: #43a8c7
 $peach: #f7d399
 $grey: #565757
-
+$input_text_border_color: #e7e9d7
 
 // Font-faces
 +font-family("SecondaSoft", "SecondaSoft-Normal", $fw-normal, normal)
