--- a/app/assets/stylesheets/_yomobi.main-menu.sass
+++ b/app/assets/stylesheets/_yomobi.main-menu.sass
@@ -49,6 +49,7 @@
               line-height: 40px
               height: 40px
               text-decoration: none
+              letter-spacing: .1em
             a
               &:hover
                 background: #b2daa1
