--- a/app/assets/stylesheets/yomobi.screen.sass
+++ b/app/assets/stylesheets/yomobi.screen.sass
@@ -327,6 +327,48 @@ a,
       .link
         margin-left: 28%
 
+.contact_form
+  label
+    color: #666
+    font-size: 16px
+    font-weight: bold
+    text-transform: uppercase
+  input[type="text"]
+    width: 430px
+    padding: 5px
+    font-size: 15px
+    text-transform: none
+    margin: 5px 0px 15px 0px
+    border: 1px solid $input_text_border_color
+  input[type="submit"]
+    text-decoration: none
+    cursor: pointer
+    background-color: $orange
+    height: 34px
+    width: 137px
+    color: white
+    border: 0px
+    letter-spacing: .1em
+    font-weight: bold
+    font-size: 15px
+    text-align: center
+    text-transform: uppercase
+    text-shadow: 0px -1px 3px #555
+    -webkit-border-radius: 5px
+    -moz-border-radius: 5px
+    -ms-border-radius: 5px
+    -o-border-radius: 5px
+    border-radius: 5px
+  textarea
+    resize: none
+    width: 430px
+    height: 10em
+    padding: 5px
+    font-size: 15px
+    text-transform: none
+    margin: 5px 0px 15px 0px
+    border: 1px solid $input_text_border_color
+
 form
   &.comments    
     background: #fbfaf1
