--- a/app/assets/stylesheets/_cdd.cdd.sass
+++ b/app/assets/stylesheets/_cdd.cdd.sass
@@ -77,8 +77,8 @@ img
   border: 1px solid $border-color 
   text-align: center
   width: $width
-  text-shadow: 0px -1px 3px #555;
-  letter-spacing: .1em;  
+  text-shadow: 0px -1px 3px #555
+  letter-spacing: .1em 
   a
     display: block
     color: $text-color
@@ -93,8 +93,8 @@ img
   background: url('#{$image}') no-repeat $left $top $color
   //padding-left: $padding-left
   width: $width
-  text-shadow: 0px -1px 3px #555;
-  letter-spacing: .1em;  
+  text-shadow: 0px -1px 3px #555
+  letter-spacing: .1em
   a
     color: $text-color
     display: block
