--- a/app/assets/stylesheets/yomobi.screen.sass
+++ b/app/assets/stylesheets/yomobi.screen.sass
@@ -328,6 +328,7 @@ a,
         margin-left: 28%
 
 .contact_form
+  height: 1150px 
   label
     color: #666
     font-size: 16px
@@ -338,7 +339,7 @@ a,
     padding: 5px
     font-size: 15px
     text-transform: none
-    margin: 5px 0px 15px 0px
+    margin: 3px 0px 10px 0px
     border: 1px solid $input_text_border_color
   input[type="submit"]
     text-decoration: none
@@ -366,8 +367,12 @@ a,
     padding: 5px
     font-size: 15px
     text-transform: none
-    margin: 5px 0px 15px 0px
+    margin: 3px 0px 10px 0px
     border: 1px solid $input_text_border_color
+  .error_msg
+    color: red
+    padding: 0px 15px
+    font-size: 15px
 
 form
   &.comments    
