--- a/app/assets/stylesheets/_cdd.cdd.sass
+++ b/app/assets/stylesheets/_cdd.cdd.sass
@@ -77,7 +77,7 @@ img
   border: 1px solid $border-color 
   text-align: center
   width: $width
-  text-shadow: 0px -1px 3px #555
+  //text-shadow: 0px -1px 3px #555
   letter-spacing: .1em 
   a
     display: block
@@ -93,7 +93,7 @@ img
   background: url('#{$image}') no-repeat $left $top $color
   //padding-left: $padding-left
   width: $width
-  text-shadow: 0px -1px 3px #555
+  //text-shadow: 0px -1px 3px #555
   letter-spacing: .1em
   a
     color: $text-color
