--- a/app/assets/stylesheets/yomobi.screen.sass
+++ b/app/assets/stylesheets/yomobi.screen.sass
@@ -56,7 +56,7 @@ a,
 .node
   ul,
   ol
-    +pretty-bullets("/assets/li-bg.png", 3px, 3px, 15px, 36px)
+    +pretty-bullets("/assets/li-bg.png", 3px, 3px, 4px, 36px)
     +adjust-font-size-to(14px)
     li
       margin-left: 14px
@@ -148,10 +148,11 @@ a,
     .i10n
       +hidden-320
       float: right
-      margin-top: -20px
+      margin-top: 0px
       width: 46%
     img
       max-width: 100%
+      max-height: 275px
 
 
 .get-started,
@@ -219,6 +220,8 @@ a,
       +margin-leader(0.5)
       @extend h2
       text-align: center
+        a
+          color: inherit
     & > .text
       padding: 0 10px
       text-align: center
@@ -586,7 +589,7 @@ form
   .node
     ul,
     ol
-      +pretty-bullets("/assets/li-bg.png", 3px, 3px, 15px, 20px)
+      +pretty-bullets("/assets/li-bg.png", 3px, 3px, 4px, 20px)
       +adjust-font-size-to(12px)
 
   #header-top
