Added CSS for .rightcol in yomobi.screen.sass

--- a/app/assets/stylesheets/yomobi.screen.sass
+++ b/app/assets/stylesheets/yomobi.screen.sass
@@ -53,6 +53,16 @@ a,
 .a
   color: $white
 
+.rightcol
+  ul,
+  ol
+    +pretty-bullets("/assets/li-bg.png", 3px, 3px, 15px, 36px)
+    +adjust-font-size-to(14px)
+    li
+      margin-left: 4px
+      margin-bottom: 4px
+
+
 .node
   ul,
   ol
