More CSS changes

--- a/app/assets/stylesheets/_yomobi.params.sass
+++ b/app/assets/stylesheets/_yomobi.params.sass
@@ -11,6 +11,8 @@ $blue: #43a8c7
 $peach: #f7d399
 $grey: #565757
 $input_text_border_color: #e7e9d7
+$good: #287f01
+$bad: #be0026
 
 // Font-faces
 +font-family("SecondaSoft", "SecondaSoft-Normal", $fw-normal, normal)
