Updated CSS for comparison-page table in yomobi.screen.sass

--- a/app/assets/stylesheets/yomobi.screen.sass
+++ b/app/assets/stylesheets/yomobi.screen.sass
@@ -296,12 +296,18 @@ a,
           padding-left: 0
         &.yomobi
           color: $green
+          font-size: 1.5em
     tbody
       th
-        padding: 3px 20px
+        padding: 10px 10px
+        text-align: center
         vertical-align: middle
+        &.feature_name
+          text-align: left
         img
-          margin: 0 auto    
+          margin: 0 auto 
+      .subtext
+        font-size: 0.7em 
 
 .testimonials,
 .blog
