Updated comparison table html in yomobi.screen.sass

--- a/app/assets/stylesheets/yomobi.screen.sass
+++ b/app/assets/stylesheets/yomobi.screen.sass
@@ -281,6 +281,8 @@ a,
       size: 14px
     margin-left: 3%
     text-align: center
+    a
+      color: inherit
     th
       border-bottom: 1px solid #b3b3a9
       border-right: 1px solid #b3b3a9
@@ -289,11 +291,12 @@ a,
         border-right: none
     thead
       th
-        padding: 10px 20px
+        text-align: center
+        padding: 10px 12px
         &.feature
           color: $blue
           font-size: 24px
-          padding-left: 0
+          text-align: left
         &.yomobi
           color: $green
           font-size: 1.5em
