Added CSS for SMS in Compare page

--- a/app/assets/stylesheets/_yomobi.params.sass
+++ b/app/assets/stylesheets/_yomobi.params.sass
@@ -10,6 +10,7 @@ $green: #87bf73
 $blue: #43a8c7
 $peach: #f7d399
 $grey: #565757
+$charcoal: #2D2A2A
 $input_text_border_color: #e7e9d7
 $good: #287f01
 $bad: #be0026
