--- a/app/assets/stylesheets/yomobi.screen.sass
+++ b/app/assets/stylesheets/yomobi.screen.sass
@@ -123,7 +123,7 @@ a,
   
   .sms-text
     position: relative
-    top 55px
+    top: 55px
     left: 89px
     background: url(https://s3.amazonaws.com/yomobi-marketing/images/sms-bubble.png) no-repeat 0 0
     float: left
