--- a/public/stylesheets/app.css
+++ b/public/stylesheets/app.css
@@ -310,15 +310,16 @@ p.success {
   border: 1px solid #b3b3b3;
   padding: 10px 2px 10px 10px;
   margin: 10px 0px 10px 0px;
-  width: 220px !important; }
+  width: 250px !important; }
   #recaptcha_container #recaptcha_label {
     white-space: nowrap; }
   #recaptcha_container a {
+    color: inherit;
     position: relative;
-    top: 1px;
+    top: 3px;
     font-size: 10px; }
   #recaptcha_container #recaptcha_response_field {
-    width: 207px !important; }
+    width: 220px !important; }
 
 #footer {
   width: 1010px;
@@ -374,6 +375,7 @@ label.help {
   padding-bottom: 4px; }
 
 .help-bubble {
+  display: inline-block;
   cursor: pointer;
   margin: 0px 4px; }
 
