--- a/public/stylesheets/sass/signup.scss
+++ b/public/stylesheets/sass/signup.scss
@@ -230,25 +230,29 @@ ul.language-bar {
     border-collapse: collapse;
     border-spacing: 0;
     margin-right:10px;
+    margin-top: 10px;
   }
   td {
     padding-bottom:5px;
   }
 
   label {
+    font-size: 1.6em;
+    font-weight: bold;
     float:right;
     white-space: nowrap;
     text-align:right;
     vertical-align:middle;
     padding: 0px 4px 0px 0px; }
   input[type=text], input[type=password] {
-    width: 180px !important;
+    width: 220px !important;
     border: 1px solid #BDC7D8;
     margin-bottom:0px;
-    padding:2px;
+    padding:6px;
   }
   select {
-    width: 186px !important;
+    width: 264px !important;
+    height: 30px;
   }
 
   input[type=submit] {
@@ -298,6 +302,9 @@ ul.language-bar {
 #actual-signin-box.sign-in-form {
   width: 330px;
   margin: 0 auto;
+  a {
+    color: inherit;
+  }
   table {
     td { padding-bottom: 2px; }
     margin: 0px auto;
@@ -306,14 +313,23 @@ ul.language-bar {
       margin-left: 0px;
     }
   }
+  .label {
+    font-size: 1.6em;
+    font-weight: bold;
+    float:right;
+    white-space: nowrap;
+    text-align:right;
+    vertical-align:middle;
+    padding: 0px 4px 0px 0px; }
   .remember-me, .forgot-password {
     margin-bottom:6px; }
   .sign-up-offer {
+    font-size: 1.2em;
     white-space:nowrap;
     vertical-align:middle;
     padding-top:14px;
     a {
-      margin-left:4px;
+      margin-left:8px;
     }
   }
 }
@@ -336,7 +352,8 @@ ul.language-bar {
       padding: 11px 10px 0 15px; }
     .title {
       font-size: 13px;
-      font-weight: bold; }
+      font-weight: bold; 
+      margin-bottom: 6px; }
     label {
       font-size: 9px; }
     .part {
@@ -396,6 +413,7 @@ ul.language-bar {
     }
   }
   a.skip-link {
+    font-size: 1.2em;
     padding: 4px 10px 0 0; }
   td.logo-preview {
     width: 125px;
