Revert "CSS changes in signup.css and app.css"
This reverts commit 1c63a11a1d3d74191edd18b231aa4ce0d17807d1.

--- a/public/stylesheets/sass/app.scss
+++ b/public/stylesheets/sass/app.scss
@@ -347,19 +347,18 @@ p.success {
   border: 1px solid #b3b3b3;
   padding: 10px 2px 10px 10px;
   margin: 10px 0px 10px 0px;
-  width: 250px !important;
+  width: 220px !important;
   
   #recaptcha_label {
     white-space: nowrap;
   }
   a {
-    color: inherit;
     position:relative;
-    top:3px;
+    top:1px;
     font-size:10px;
   }
   #recaptcha_response_field { 
-    width:220px !important;
+    width:207px !important;
   }
 }
 
@@ -419,11 +418,7 @@ ul.fancy-selectable {
     margin-right: 4px !important; } }
 
 label.help { padding-bottom: 4px; }
-.help-bubble { 
-  display: inline-block; 
-  cursor: pointer; 
-  margin: 0px 4px; 
-}
+.help-bubble { cursor: pointer; margin: 0px 4px; }
 
 .hr {
   border-top: 1px solid $light-border;
