--- a/public/stylesheets/signup.css
+++ b/public/stylesheets/signup.css
@@ -211,26 +211,22 @@ ul.language-bar {
   border: 0;
   border-collapse: collapse;
   border-spacing: 0;
-  margin-right: 10px; 
-  margin-top: 10px; }
+  margin-right: 10px; }
 #signup-box td, #actual-signin-box td {
   padding-bottom: 5px; }
 #signup-box label, #actual-signin-box label {
-  font-weight: bold;
-  font-size: 1.6em;
   float: right;
   white-space: nowrap;
   text-align: right;
   vertical-align: middle;
   padding: 0px 4px 0px 0px; }
 #signup-box input[type=text], #signup-box input[type=password], #actual-signin-box input[type=text], #actual-signin-box input[type=password] {
-  width: 220px !important;
+  width: 180px !important;
   border: 1px solid #BDC7D8;
   margin-bottom: 0px;
-  padding: 6px; }
+  padding: 2px; }
 #signup-box select, #actual-signin-box select {
-  width: 264px !important; 
-  height: 30px;}
+  width: 186px !important; }
 #signup-box input[type=submit], #actual-signin-box input[type=submit] {
   float: right;
   margin: 5px 10px 0px 40px; }
@@ -274,9 +270,6 @@ ul.language-bar {
 #actual-signin-box.sign-in-form {
   width: 330px;
   margin: 0 auto; }
-  #actual-signin-box.sign-in-form a {
-    color: inherit;
-  }
   #actual-signin-box.sign-in-form table {
     margin: 0px auto; }
     #actual-signin-box.sign-in-form table td {
@@ -284,24 +277,14 @@ ul.language-bar {
     #actual-signin-box.sign-in-form table .pretty-button {
       float: left;
       margin-left: 0px; }
-  #actual-signin-box.sign-in-form.label {
-    font-size: 1.6em;
-    font-weight: bold;
-    float:right;
-    white-space: nowrap;
-    text-align:right;
-    vertical-align:middle;
-    padding: 0px 4px 0px 0px; }
-
   #actual-signin-box.sign-in-form .remember-me, #actual-signin-box.sign-in-form .forgot-password {
     margin-bottom: 6px; }
   #actual-signin-box.sign-in-form .sign-up-offer {
-    font-size: 1.2em;
     white-space: nowrap;
     vertical-align: middle;
     padding-top: 14px; }
     #actual-signin-box.sign-in-form .sign-up-offer a {
-      margin-left: 8px; }
+      margin-left: 4px; }
 
 #actual-signin-box.signup-error {
   width: 330px;
@@ -321,8 +304,7 @@ ul.language-bar {
       padding: 11px 10px 0 15px; }
     #step-arrows .arrow .title {
       font-size: 13px;
-      font-weight: bold; 
-      margin-bottom: 6px; }
+      font-weight: bold; }
     #step-arrows .arrow label {
       font-size: 9px; }
     #step-arrows .arrow .part {
@@ -378,7 +360,6 @@ ul.language-bar {
   padding: 0 0 0 2px;
   float: left; }
 #account-setup-box a.skip-link, #account-settings-box a.skip-link {
-  font-size: 1.2em;
   padding: 4px 10px 0 0; }
 #account-setup-box td.logo-preview, #account-settings-box td.logo-preview {
   width: 125px;
