Updated CSS for header and main menu and signup

--- a/app/assets/stylesheets/_yomobi.header.sass
+++ b/app/assets/stylesheets/_yomobi.header.sass
@@ -1,6 +1,7 @@
 #header-wrap
   background: url('/assets/header-bg.png') $blue repeat-x center bottom
-  height: 180px
+  //height: 180px
+  padding-bottom: 71px
   
 #header-top
   +clearfix
@@ -11,6 +12,8 @@
     margin-left: 20%
   & > .leftcol
     +logo(50px, 223px)
+  .rightcol
+    margin-bottom: 10px
 
 .logo
   +margin-leader(1.5)
