--- a/app/assets/stylesheets/yomobi.screen.sass
+++ b/app/assets/stylesheets/yomobi.screen.sass
@@ -607,7 +607,7 @@ form
     float: left
     margin: 0 0 15px 38%
   #header-wrap
-    height: 240px
+    //height: 240px
   .promo
     .row
       height: 180px
@@ -735,7 +735,7 @@ form
     float: right
     margin: 0 3% 0 0
   #header-wrap
-    height: 227px
+    //height: 227px
 
   #header-wrap
     & > .main-menu
@@ -825,7 +825,7 @@ form
     float: left
     margin: 0 0 24px 24%
   #header-wrap
-    height: 290px
+    //height: 290px
     & > .main-menu
       & > .content
         & > ul
@@ -886,7 +886,7 @@ form
 
 +res240
   #header-wrap
-    height: 230px
+    //height: 230px
   #header-top
     .btn-img
       margin-left: 6.5%
