Removed height adjustment of menu-bar in yomobi.screen.sass for low resolution screens

--- a/app/assets/stylesheets/yomobi.screen.sass
+++ b/app/assets/stylesheets/yomobi.screen.sass
@@ -745,8 +745,8 @@ form
             & > a,
             & > .a
               +adjust-font-size-to(14px)
-              height: 41px
-              padding-top: 18px
+              //height: 41px
+              //padding-top: 18px
   #content-middle-wrap
     & > .leftcol,
     & > .rightcol
