Test Drive Page - Iteration 1

--- a/app/views/test_drives/new.html.slim
+++ b/app/views/test_drives/new.html.slim
@@ -1,2 +1,6 @@
-h2 Test drive page
-p= button_to 'Begin my test_drive', test_drive_path
+div.test-drive
+  h2 =t'take_a_test_drive'
+  p= button_to ='begin_test_drive', test_drive_path
+  div.row-1
+  	p This is the dawning of the age of aquarius.
+
