--- a/app/assets/stylesheets/yomobi.screen.sass
+++ b/app/assets/stylesheets/yomobi.screen.sass
@@ -259,6 +259,33 @@ a,
       li
         margin-left: 4px
         margin-bottom: 4px
+  
+  .test-drive
+    margin: 0px 1%
+    input[type="submit"]
+      text-decoration: none
+      cursor: pointer
+      background-color: $orange
+      color: white
+      border: 0px
+      letter-spacing: .1em
+      font-weight: $fw-bold
+      font-size: 15px
+      text-align: center
+      text-transform: uppercase
+      text-shadow: 0px 2px 3px #555
+      -webkit-border-radius: 5px
+      -moz-border-radius: 5px
+      -ms-border-radius: 5px
+      -o-border-radius: 5px
+      border-radius: 5px
+      &:hover
+        background-color: $dark-orange
+    .row, 
+    .row-1
+      margin-top: 15px
+        
+ 
 
 .plans,
 .fees
