--- a/app/views/test_drives/new.html.slim
+++ b/app/views/test_drives/new.html.slim
@@ -1,6 +1,6 @@
 div.test-drive
   h2 =t('test_drive.take_a_test_drive')
-  p= button_to =t('test_drive.begin_test_drive'), test_drive_path
+  =button_to =t('test_drive.begin_test_drive'), test_drive_path
   div.row-1
   	p 
   	  img src="https://s3.amazonaws.com/yomobi-marketing/images/test-drive-2.png"
