Updated CSS for mobile-stats section in yomobi.screen.sass

--- a/app/assets/stylesheets/yomobi.screen.sass
+++ b/app/assets/stylesheets/yomobi.screen.sass
@@ -208,15 +208,23 @@ a,
   .mobile-stats
     p
       display: block
-      width: 46%
     .i10n
       +hidden-320
       float: right
       margin-top: 0px
       width: 46%
     img
+      margin: auto
       max-width: 100%
-      max-height: 275px
+      max-height: 150px
+    table
+      td
+        vertical-align: top
+        text-align: center
+        .first
+          padding-right: 15px
+        .last
+          padding-left: 15px
 
 
 .get-started,
