--- a/app/assets/stylesheets/yomobi.screen.sass
+++ b/app/assets/stylesheets/yomobi.screen.sass
@@ -293,7 +293,21 @@ a,
     .row-1
       margin-top: 15px
         
- 
+  .mobile-matters
+    ol
+      margin-left: 14px
+      margin-right: 16px
+      font-size: 2.4em
+    li
+      list-style-type: decimal
+      padding-left: 0px
+      background: none
+      margin-bottom: 2em
+      p
+        font-size: 16px
+        line-height: 1em
+      img
+        max-width: 85%
 
 .plans,
 .fees
