--- a/app/assets/stylesheets/yomobi.screen.sass
+++ b/app/assets/stylesheets/yomobi.screen.sass
@@ -307,7 +307,10 @@ a,
         font-size: 16px
         line-height: 1em
       img
-        max-width: 85%
+        width: 85%
+        border: 4px solid #DEDEB4
+        padding: 10px
+        margin-top: 15px
 
 .plans,
 .fees
