Mobile Matters - Right Column CSS

--- a/app/assets/stylesheets/yomobi.screen.sass
+++ b/app/assets/stylesheets/yomobi.screen.sass
@@ -267,6 +267,15 @@ a,
       li
         margin-left: 4px
         margin-bottom: 4px
+    .mobile-matters
+      text-align: center
+      h2
+        margin-top: 0.6em
+      h3
+        line-height: 1.5em
+      img
+        width: 80%
+        margin: auto
   
   .test-drive
     margin: 0px 1%
