Clients Page CSS

--- a/app/assets/stylesheets/yomobi.screen.sass
+++ b/app/assets/stylesheets/yomobi.screen.sass
@@ -457,11 +457,12 @@ a,
         @extend h3
       .i10n
         +hidden-320
-        height: 138px
+        //height: 138px
+        width: 112px
         position: absolute
         right: 2.3%
         top: 20px
-        width: 25%
+
         overflow: hidden
         img
           max-width: 100%
