'sign in' button in IE

--- a/app/assets/stylesheets/yomobi.ie8.sass
+++ b/app/assets/stylesheets/yomobi.ie8.sass
@@ -11,3 +11,8 @@
             background: #5a8a52
           &.active-trail
             background: #5a8a52
+  #header-top
+    .btn-img
+      a
+        letter-spacing: 1px
+
