--- a/app/assets/stylesheets/yomobi.ie7.sass
+++ b/app/assets/stylesheets/yomobi.ie7.sass
@@ -12,6 +12,11 @@
             background: #5a8a52
           &.active-trail
             background: #5a8a52
+  #header-top
+    .btn-img
+      a
+        letter-spacing: 1px
+
 
 .main-menu
   a
