--- a/public/stylesheets/sass/builder.scss
+++ b/public/stylesheets/sass/builder.scss
@@ -32,6 +32,10 @@ div.wysiwyg ul.toolbar {
     padding-left: 0;
     margin: 54px 0 10px 0;
     font-size: $font-size-ul; }
+  a, a:visited {
+    color: #3B5998;
+    text-decoration: none;
+  }
   .spacer {
     border-top: 1px solid #dddddd;
     margin: 5px 0; }
