--- a/public/stylesheets/app.css
+++ b/public/stylesheets/app.css
@@ -166,7 +166,7 @@ p.success {
 
 #header.signed-in {
   padding-top: 10px;
-  background: url(/images/bg-header.png);
+  background: url("/assets/header-bg.png") #43A8C7 repeat-x center bottom;
   color: white;
   height: 31px; }
   #header.signed-in .content {
@@ -182,7 +182,11 @@ p.success {
     height: 30px;
     border: 1px solid #566986;
     border-bottom: none;
-    background: #52678c;
+    background-image: -webkit-gradient(linear, 50% 0%, 50% 100%, color-stop(0%, #5A8A52), color-stop(33.33333%, #4F7748), color-stop(66.66667%, #4F7748), color-stop(100%, #5A8A52));
+    background-image: -webkit-linear-gradient(#5A8A52,#4F7748,#4F7748,#5A8A52);
+    background-image: -moz-linear-gradient(#5A8A52,#4F7748,#4F7748,#5A8A52);
+    background-image: -o-linear-gradient(#5A8A52,#4F7748,#4F7748,#5A8A52);
+    background-image: linear-gradient(#5A8A52,#4F7748,#4F7748,#5A8A52);    
     text-align: right; }
     #header.signed-in #nav a, #header.signed-in #nav a:visited {
       margin: 0px -1px;
@@ -194,9 +198,9 @@ p.success {
       text-decoration: none; }
     #header.signed-in #nav a:hover {
       margin: 0px -1px;
-      background-color: #6d86b7; }
+      background-color: #4F7748; }
     #header.signed-in #nav .vdivider {
-      background: #6d86b7;
+      background: #4F7748;
       content: " ";
       display: block;
       height: 15px;
@@ -412,6 +416,10 @@ label.help {
   .company-header .company-name {
     font-size: 14px;
     font-weight: bold; }
+  .company-header a .company-url {
+    color: #3B5998;
+    text-decoration: none;
+  }
   .company-header .divider-dot {
     font-weight: bold;
     padding: 0px 10px; }
