--- a/public/stylesheets/sass/app.scss
+++ b/public/stylesheets/sass/app.scss
@@ -193,7 +193,7 @@ p.success {
 
 #header.signed-in {
   padding-top: 10px;
-  background: url(/images/bg-header.png);
+  background: url("/assets/header-bg.png") #43A8C7 repeat-x center bottom;
   color: $header-font-color;
   height: 31px;
   .content {
@@ -209,7 +209,11 @@ p.success {
     height: 30px;
     border: 1px solid $secondary-color-border;
     border-bottom: none;
-    background: $secondary-color;
+    background-image: -webkit-gradient(linear, 50% 0%, 50% 100%, color-stop(0%, #5A8A52), color-stop(33.33333%, #4F7748), color-stop(66.66667%, #4F7748), color-stop(100%, #5A8A52));
+    background-image: -webkit-linear-gradient(#5A8A52,#4F7748,#4F7748,#5A8A52);
+    background-image: -moz-linear-gradient(#5A8A52,#4F7748,#4F7748,#5A8A52);
+    background-image: -o-linear-gradient(#5A8A52,#4F7748,#4F7748,#5A8A52);
+    background-image: linear-gradient(#5A8A52,#4F7748,#4F7748,#5A8A52);    
     text-align: right;
     a, a:visited {
       margin: 0px -1px;
@@ -221,9 +225,9 @@ p.success {
       text-decoration: none; }
     a:hover {
       margin: 0px -1px; 
-      background-color: #6d86b7; } 
+      background-color: #4F7748; } 
     .vdivider {
-      background: #6d86b7;
+      background: #4F7748;
       content: " ";
       display: block;
       height: 15px;
@@ -455,7 +459,10 @@ label.help { padding-bottom: 4px; }
 .company-header {
   padding: 5px 10px;
   .company-name { font-size: 14px; font-weight: bold; }
-  a.company-url {}
+  a.company-url {
+    color: #3B5998;
+    text-decoration: none;
+  }
   .divider-dot { font-weight: bold; padding: 0px 10px; }
 }
 
