Test Drive Page doesn't read language files correctly fix

--- a/app/views/test_drives/new.html.slim
+++ b/app/views/test_drives/new.html.slim
@@ -1,11 +1,11 @@
 div.test-drive
-  h2 =t('test_drive.title')
-  p= button_to t('test_drive.begin_btn'), test_drive_path
+  h2 =t('testdrive.title')
+  p= button_to t('testdrive.begin_btn'), test_drive_path
   div.row.1
-  	h3 =t('test_drive.header')
+  	h3 =t('testdrive.header')
   	p 
   	  img.test-drive src="https://s3.amazonaws.com/yomobi-marketing/images/test-drive-2.png" 
-  	  ==t('test_drive.explanation')
+  	  ==t('testdrive.explanation')
 
   div.row.2
     p
