sign in/up pages header

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -40,7 +40,8 @@
               <li class="first"><a href="/users/sign_up"><%= t 'sign_up.sign_up' %></a></li>
               <li><a href="/about-us"><%= t 'links.about' %></a></li>
               <li><a href="#"><%= t 'links.help' %></a></li>
-              <li class="last"><a href="#"><%= t 'links.language' %></a></li>
+              <li><a href="?locale=en"><%= t 'links.language.en' %></a></li>
+              <li class="last"><a href="?locale=es"><%= t 'links.language.es' %></a></li>
             </ul>
           </div>
         </div>
