--- a/app/views/layouts/application_loco.slim
+++ b/app/views/layouts/application_loco.slim
@@ -7,6 +7,13 @@ html lang="en-US"
     link[href="/assets/yomobi.print.css" media="print" rel="stylesheet" type="text/css"]
     script[src="/assets/application.js"]
     meta[name="viewport" content="width=device-width; initial-scale=1.0; maximum-scale=1.0; user-scalable=0;"]
+    = stylesheet_link_tag '/stylesheets/signup-app'
+
+    == '<!--[if IE 9]><link href="/assets/yomobi.ie9.css" media="screen, projection" rel="stylesheet" type="text/css" /><![endif]-->'
+    == '<!--[if IE 8]><link href="/assets/yomobi.ie8.css" media="screen, projection" rel="stylesheet" type="text/css" /><![endif]-->'
+    == '<!--[if IE 7]><link href=\"/assets/yomobi.ie7.css" media="screen, projection" rel="stylesheet" type="text/css" /><![endif]-->'
+    == '<!--[if lt IE 9]><script src="/assets/ie9.js"></script><![endif]-->'
+
     = render 'shared/meta'
     = csrf_meta_tag
   body
