--- a/app/views/layouts/application_loco.slim
+++ b/app/views/layouts/application_loco.slim
@@ -1,6 +1,16 @@
-doctype
-html lang="en-US"
-  head
+|<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML+RDFa 1.0//EN" "http://www.w3.org/MarkUp/DTD/xhtml-rdfa-1.dtd">
+html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" version="XHTML+RDFa 1.0" dir="ltr"
+  head profile="http://www.w3.org/1999/xhtml/vocab"
+    |
+      <!--[if IE 8]>
+      <link href="/assets/yomobi.ie8.css" media="screen, projection" rel="stylesheet" type="text/css" />
+      <![endif]-->
+      <!--[if IE 7]>
+      <link href="/assets/yomobi.ie7.css" media="screen, projection" rel="stylesheet" type="text/css" />
+      <![endif]-->
+      <!--[if lt IE9]>
+      <script src="/assets/ie9.js"></script>
+      <![endif]-->
     meta http-equiv="Content-Type" content="text/html; charset=utf-8"
     link[href="/assets/reset.css" media="screen, projection" rel="stylesheet" type="text/css"]
     link[href="/assets/yomobi.screen.css" media="screen, projection" rel="stylesheet" type="text/css"]
@@ -9,6 +19,14 @@ html lang="en-US"
     meta[name="viewport" content="width=device-width; initial-scale=1.0; maximum-scale=1.0; user-scalable=0;"]
     = render 'shared/meta'
     = csrf_meta_tag
+    javascript:
+      (function() {
+        var cx = '016157102718229871255:m9xebgnqzt8';
+        var gcse = document.createElement('script'); gcse.type = 'text/javascript'; gcse.async = true;
+        gcse.src = (document.location.protocol == 'https:' ? 'https:' : 'http:') +
+              '//www.google.com/cse/cse.js?cx=' + cx;
+        var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(gcse, s);
+      })();
   body
     = topline_notice
     #body-wrap
@@ -24,15 +42,20 @@ html lang="en-US"
               .content
                 ul
                   li.first
+                    a[href="/users/sign_in"]= t 'sign_in.sign_in'
+                  li
                     a[href="/users/sign_up"]= t 'sign_up.sign_up'
                   li
                     a[href="/about-us"]= t 'links.about'
                   li
                     a[href="#"]= t 'links.help'
-                  li
-                    a[href="?locale=en"]= t 'links.language.en'
                   li.last
-                    a[href="?locale=es"]= t 'links.language.es'
+                    a[href="#"] Language
+                  /
+                    li
+                      a[href="?locale=en"]= t 'links.language.en'
+                    li.last
+                      a[href="?locale=es"]= t 'links.language.es'
             .btn-img
               a[href="/users/sign_in"]= t 'sign_in.sign_in'
             .social-menu
